# task_manager

./: .gitignore  db.sqlite3  pyproject.toml  requirement.txt
cadastros/: admin.py  filters.py  models.py  urls.py  views.py
cadastros/migrations/: 0001_initial.py  0002_alter_task_comment_alter_task_completion_date_and_more.py
cadastros/templates/cadastros/: filter.html  form-delete.html  form-upload.html  form.html
cadastros/templates/cadastros/lista/: auditorias.html  categorias.html  comentarios.html  lista-tarefas.html  tarefas.html  usuarios.html
paginas/: urls.py  views.py
paginas/templates/: index.html
paginas/templates/paginas/: modelo.html  sobre.html  uml.html
static/css/: style.css
task_manager/: settings.py  urls.py
usuarios/: admin.py  forms.py  models.py  urls.py  views.py
usuarios/templates/usuarios/: form.html  login.html
