[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = "The Task Manager API is an application developed in Python with Django that offers a RESTful interface for managing tasks (todo list). With this API, users can create, view, update and delete tasks, organize tasks into lists, add comments and categorize their tasks for better organization."
authors = ["Márcio J Carvalho <marciojosedecarvalho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.15"
crispy-bootstrap4 = "2024.1"
django-braces = "1.15.0"
django-crispy-forms = "2.3"
sqlparse = "0.5.1"
django-debug-toolbar = "4.3.0"
django-cleanup = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
